--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "nprogress": "^0.2.0",
     "react": "^19.1.0",
     "react-confetti": "^6.4.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.0",
